--- a/Training-poc/src/App.css
+++ b/Training-poc/src/App.css
@@ -106,8 +106,15 @@ input[type='tel'],
 .error {
   color: red;
 }
-
- 
 h2{
   text-align: center;
+}
+ 
+h3{
+  text-align: center;
+}
+
+td ,th{
+  border: 1px solid #ccc;
+  text-align: center
 }
