--- a/Training-poc/src/App.css
+++ b/Training-poc/src/App.css
@@ -85,7 +85,7 @@ input[type=submit] {
   border: none;
   border-radius: 4px;
   cursor: pointer;
-  float: right;
+  margin-left: 40%;
 }
 input[type=submit]:hover {
   background-color: #45a049;
